Added item representation, fixed layout.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.view.MainActivity">
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/itunes_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/container"
+        app:layout_constraintTop_toBottomOf="@id/itunes_container"
         app:menu="@menu/bottom_navbar_menu"/>
 
 </android.support.constraint.ConstraintLayout>
