Created details entities and endpoints.

--- a/app/src/main/res/layout/itunes_list_item.xml
+++ b/app/src/main/res/layout/itunes_list_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="model"
-            type="com.example.nazariy.geekapps.domain.model.Result" />
+            type="com.example.nazariy.geekapps.domain.model.rss.Result" />
 
         <variable
             name="glide"
