--- a/app/src/main/res/layout/fragment_itunes_items.xml
+++ b/app/src/main/res/layout/fragment_itunes_items.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/audiobooks_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation_slide_right"/>
 
 </FrameLayout>
