--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -18,7 +18,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".presentation.view.fragments.DetailsFragment">
 
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="@{String.format(@string/country_placeholder, model.country)}"
+                android:text='@{model.country == null ? "" : String.format(@string/country_placeholder, model.country)}'
                 tools:text="Country" />
 
             <TextView
