--- a/app/src/main/res/layout-v21/itunes_list_item.xml
+++ b/app/src/main/res/layout-v21/itunes_list_item.xml
@@ -67,23 +67,19 @@
                 android:id="@+id/likeIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/like_icon"
-                android:button="@null"
-                android:checked="false"
                 android:clickable="true"
+                android:button="@null"
+                android:stateListAnimator="@animator/scale"
+                android:checked="false"
+                android:background="@drawable/like_icon"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/album_photo"
                 app:layout_constraintTop_toBottomOf="@+id/album_name" />
-
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </layout>
