--- a/app/src/main/res/layout/itunes_list_item.xml
+++ b/app/src/main/res/layout/itunes_list_item.xml
@@ -16,7 +16,6 @@
     </data>
 
     <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
@@ -50,6 +49,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@id/album_photo"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintVertical_chainStyle="spread"
                 tools:text="Art" />
 
             <TextView
@@ -58,20 +59,16 @@
                 android:layout_height="wrap_content"
                 android:text="@{model.name}"
                 tools:text="name"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/likeIcon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/album_photo"
                 app:layout_constraintTop_toBottomOf="@id/artist_name" />
 
             <CheckBox
                 android:id="@+id/likeIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/like_icon"
                 android:button="@null"
@@ -80,6 +77,7 @@
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/album_photo"
                 app:layout_constraintTop_toBottomOf="@+id/album_name" />
