--- a/app/src/main/res/layout/fragment_itunes_items.xml
+++ b/app/src/main/res/layout/fragment_itunes_items.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/audiobooks_list"
+        android:id="@+id/itunes_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layoutAnimation="@anim/layout_animation_slide_right"/>
